--- a/app/brand.html
+++ b/app/brand.html
@@ -64,7 +64,7 @@
     						<div class="menu col-8">
     							<ul class="menu-outside">
     								<li><a href="#">look book </a></li>
-    								<li><a href="./produc-view.html">local stores</a></li>
+    								<li><a href="./product-view.html">local stores</a></li>
     								<li><a href="./brand.html">the brand</a></li>
     								<li><a href="#">womens</a></li>
     								<li class="mens"><a href="#" >mens</a>
