--- a/app/product-view.html
+++ b/app/product-view.html
@@ -140,29 +140,30 @@
                   <div class="caption">
                     <p class="h4">Ave classic sweatshirt</p>
                   </div>
-                  <div class="product-review">
-                    <span id="stars">
-                      <img src="./img/producView-img/yellowStar.png" alt="star">
-                      <img src="./img/producView-img/yellowStar.png" alt="star">
-                      <img src="./img/producView-img/yellowStar.png" alt="star">
-                      <img src="./img/producView-img/yellowStar.png" alt="star">
-                      <img src="./img/producView-img/whiteStar.png" alt="star">
-                    </span>
-                    <span id="number-of-reviews">3 review(s)</span>
-                    <span id="addingReview"><a href="#">Add a review</a></span>
-                    <span id="share">Share:
-                      <span id="social-icons">
-                        <img src="./img/vkSocial.png" alt="vk">
-                        <img src="./img/facebookSocial.png" alt="facebook">
-                        <img src="./img/twitterSocial.png" alt="twitter">
-                        <img src="./img/instagramSocial.png" alt="inst">
-                      </span>
-                    </span>
+                  <div class="product-review row">
+                    <div id="stars" class="stars">
+                        <img src="./img/producView-img/yellowStar.png" alt="star" class="img-responsive">
+                        <img src="./img/producView-img/yellowStar.png" alt="star" class="img-responsive">
+                        <img src="./img/producView-img/yellowStar.png" alt="star" class="img-responsive">
+                        <img src="./img/producView-img/yellowStar.png" alt="star" class="img-responsive">
+                        <img src="./img/producView-img/whiteStar.png" alt="star" class="img-responsive">
+                    </div>
+                    <div class="text">
+                      <span id="number-of-reviews"><a href="#">3 review(s)</a></span>
+                      <span id="addingReview"><a href="#">Add a review</a></span>
 
+                    </div>
+                    <div class="share row">
+                      <span id="share-text">Share: </span>
+                      <div id="social-icons" class="social-icons row" class="img-responsive">
+                        <a href="#"><img src="./img/vkSocial.png" alt="vk" class="img-responsive"></a>
+                        <a href="#"><img src="./img/facebookSocial.png" alt="facebook" class="img-responsive"></a>
+                        <a href="#"><img src="./img/twitterSocial.png" alt="twitter" class="img-responsive"></a>
+                        <a href="#"><img src="./img/instagramSocial.png" alt="inst" class="img-responsive"></a>
+                      </div>
+                    </div>
                   </div>
-                  <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis laborum in, cum corrupti ut beatae rem quidem. Quasi eaque quibusdam nisi quos deleniti assumenda iure sint. A ullam culpa, deleniti.
-                  </div>
+
               </div>
             </div>
           </div>
