--- a/app/brand.html
+++ b/app/brand.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <base href="/">
+    <base href="#">
 
     <title>Avenue Fashion</title>
     <meta name="description" content="">
@@ -59,12 +59,12 @@
     				<div class="container-fluid">
     					<div class="row">
     						<div class="logo col-2">
-    							<a href="">Avenue <span>Fashion</span></a>
+    							<a href="./index.html">Avenue <span>Fashion</span></a>
     						</div>
     						<div class="menu col-8">
     							<ul class="menu-outside">
     								<li><a href="#">look book </a></li>
-    								<li><a href="./product-view.html">local stores</a></li>
+    								<li><a href="#">local stores</a></li>
     								<li><a href="./brand.html">the brand</a></li>
     								<li><a href="#">womens</a></li>
     								<li class="mens"><a href="#" >mens</a>
