--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="logo col-2">
-							<a href="">Avenue <span>Fashion</span></a>
+							<a href="./index.html">Avenue <span>Fashion</span></a>
 						</div>
 						<div class="menu col-8">
 							<ul class="menu-outside">
@@ -146,7 +146,7 @@
 											<span class="current price-item"><span class="currency-sign">&#163;</span><span class="number">27.96</span></span>
 										</div>
 										<div class="item-hover">
-											<div class="name">Womens burnt orange casual tee <span class="current-price"><span class="currency-sign">&#163;</span>29.95</span></div>
+											<div class="name">Womens burnt orange casual tee  <span class="current-price"><span class="currency-sign">&#163;</span>29.95</span></div>
 											<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, magnam.</div>
 											<div class="icons">
 												<div class="icon-wrapper"><a href="#">
@@ -467,7 +467,7 @@
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, assumenda.
 							</div>
 							<div class="button">
-								<a href="#">View now</a>
+								<a href="./product-view.html">View now</a>
 							</div>
 						</div>
 					</div>
@@ -485,7 +485,7 @@
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, assumenda.
 							</div>
 							<div class="button">
-								<a href="#">View now</a>
+								<a href="./product-view.html">View now</a>
 							</div>
 						</div>
 					</div>
@@ -503,7 +503,7 @@
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam libero dolore vitae doloribus incidunt.
 							</div>
 							<div class="button">
-								<a href="#">View now</a>
+								<a href="./product-view.html">View now</a>
 							</div>
 						</div>
 					</div>
