--- a/app/product-view.html
+++ b/app/product-view.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <base href="/">
+    <base href="#">
 
     <title>Avenue Fashion</title>
     <meta name="description" content="">
@@ -59,7 +59,7 @@
     				<div class="container-fluid">
     					<div class="row">
     						<div class="logo col-2">
-    							<a href="">Avenue <span>Fashion</span></a>
+    							<a href="./index.html">Avenue <span>Fashion</span></a>
     						</div>
     						<div class="menu col-8">
     							<ul class="menu-outside">
@@ -131,10 +131,8 @@
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
-
             <div class="column col-5 column-right">
               <div class="column-item" id="about-product">
                   <div class="caption">
@@ -151,7 +149,6 @@
                     <div class="text">
                       <span id="number-of-reviews"><a href="#">3 review(s)</a></span>
                       <span id="addingReview"><a href="#">Add a review</a></span>
-
                     </div>
                     <div class="share row">
                       <span id="share-text">Share: </span>
@@ -163,7 +160,121 @@
                       </div>
                     </div>
                   </div>
+                  <div class="price">
+                    <span class="price-item old"><span class="currency-sign">&#163;</span><span class="number">89.99</span></span>
+                    <span class="current price-item"><span class="currency-sign">&#163;</span><span class="number">27.96</span></span>
+                  </div>
+                  <div class="product-info">
+                    <div id="product-availability"><span class="type">availability: </span><span class="description"> in stock</span></div>
+                    <div id="product-code"><span class="type">product code: </span><span class="description"> #499577</span></div>
+                    <div id="product-tags"><span class="type">tags: </span><span class="description active"> classic, casual, vnek, loose</span></div>
+                  </div>
+                  <div class="product-description">
+                    <span class="description-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga omnis, maiores tempora, ullam consequatur non odio voluptatibus architecto, soluta placeat, explicabo doloribus eum! Assumenda quod porro doloribus fugiat quisquam repellat.</span>
+                    <ul class="advantages">
+                      <li class="advantages-item">Elasticated cuffs</li>
+                      <li class="advantages-item">Casual fits</li>
+                      <li class="advantages-item">100% cotton</li>
+                      <li class="advantages-item">Free shipping with 4 days delivery</li>
+                    </ul>
+                  </div>
+                  <div class="select row">
+                    <div class="select-item col-4">
+                      <div class="wrapper">
+                        <input type="text" name="select-color" placeholder="Select colour" id="select-size" >
+                        <div class="img-arrow arrow-alone" id="color-arrow"><a href="#" ><img src="img/arrowDownGr.png" alt="arrow" class="img-responsive"></a></div>
+                      </div>
+                      <ul class="select-list hidden" id="color-list">
+                        <li><a href="#">black</a></li>
+                        <li><a href="#">white</a></li>
+                        <li><a href="#">red</a></li>
+                        <li><a href="#">blue</a></li>
+                      </ul>
+                    </div>
+                    <div class="select-item col-3">
+                      <div class="wrapper">
+                        <input type="text" name="select-size" placeholder="Select size" id="select-size">
+                        <div class="img-arrow arrow-alone" id="size-arrow"><a href="#" ><img src="img/arrowDownGr.png" alt="arrow" class="img-responsive"></a></div>
+                      </div>
+                      <ul class="select-list hidden" id="size-list">
+                        <li><a href="#">s</a></li>
+                        <li><a href="#">m</a></li>
+                        <li><a href="#">l</a></li>
+                        <li><a href="#">xl</a></li>
+                      </ul>
+                    </div>
+                    <div class="select-item col-2">
+                      <div class="wrapper">
+                        <input type="text" name="select-quantity" value="1" id="select-quantity" >
+                        <div class="img-arrow top"><a href="#"><img src="img/arrowDownGr.png" alt="arrow" class="img-responsive"></a></div>
+                        <div class="img-arrow bottom"><a href="#"><img src="img/arrowDownGr.png" alt="arrow" class="img-responsive"></a></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="buttons row">
+                    <div class="button-wrapper">
+                      <a href="#" class="button" id="add-to-card"><img src="./img/shopBusk.png" alt="basket" class="img-responsive">Add to cart</a>
+                    </div>
+                    <div class="button-wrapper offset-1">
 
+                      <a href="#" class="button" id="add-to-lookbook"><img src="./img/heart.png" alt="heart" class="img-responsive">Add to lookbook</a>
+                    </div>
+                  </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="product-view-details col-10 offset-1">
+            <ul class="details-navigation">
+              <li id="description" class="detailNavItem active"><a href="">description</a></li>
+              <li id="video" class="detailNavItem"><a href="">video</a></li>
+              <li id="size-specs" class="detailNavItem "><a href="">size & specs</a></li>
+              <li id="delivery" class="detailNavItem "><a href="">delivery & returns</a></li>
+              <li id="reviews" class="detailNavItem"><a href="">reviews</a></li>
+            </ul>
+            <div class="details-item description display">
+              <div class="caption">
+                <p>Nunc egestas posuere enim, eu maximus erat posuere eget</p>
+              </div>
+              <div class="rest-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, suscipit facilis pariatur, illo nostrum mollitia nam illum omnis ratione rerum quaerat maxime, doloremque sed iste accusantium voluptates vel veritatis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates voluptate, expedita ut sed maxime similique veniam, iure corrupti consequatur sit laudantium voluptatem doloribus error voluptas explicabo optio quia reiciendis debitis!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam enim saepe veritatis, veniam mollitia, vitae amet pariatur accusamus id temporibus corporis, rem dolorem ratione assumenda maiores ea sunt, quisquam eaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate veniam facere aliquam, eaque aspernatur temporibus, nesciunt libero possimus impedit quos ratione animi delectus earum harum quod architecto deserunt, commodi odit?</p>
+              </div>
+            </div>
+            <div class="details-item video hidden">
+              <div class="caption">
+                <p>Nunc egestas posuere enim, eu maximus erat posuere eget</p>
+              </div>
+              <div class="rest-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, suscipit facilis pariatur, illo nostrum mollitia nam illum omnis ratione rerum quaerat maxime, doloremque sed iste accusantium voluptates vel veritatis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates voluptate, expedita ut sed maxime similique veniam, iure corrupti consequatur sit laudantium voluptatem doloribus error voluptas explicabo optio quia reiciendis debitis!</p>
+                <!-- <p><strong>Lorem ipsum dolor sit amet, consectetur</strong> adipisicing elit. Laboriosam enim saepe veritatis, veniam mollitia, vitae amet pariatur accusamus id temporibus corporis, rem dolorem ratione assumenda maiores ea sunt, quisquam eaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate veniam facere aliquam, eaque aspernatur temporibus, nesciunt libero possimus impedit quos ratione animi delectus earum harum quod architecto deserunt, commodi odit?</p> -->
+              </div>
+            </div>
+            <div class="details-item size hidden">
+              <div class="caption">
+                <p>Nunc egestas posuere enim, eu maximus erat posuere eget</p>
+              </div>
+              <div class="rest-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, suscipit facilis pariatur, illo nostrum mollitia nam illum omnis ratione rerum quaerat maxime, doloremque sed iste accusantium voluptates vel veritatis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates voluptate, expedita ut sed maxime similique veniam, iure corrupti consequatur sit laudantium voluptatem doloribus error voluptas explicabo optio quia reiciendis debitis!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam enim saepe veritatis, veniam mollitia, vitae amet pariatur accusamus id temporibus corporis, rem dolorem ratione assumenda maiores ea sunt, quisquam eaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate veniam facere aliquam, eaque aspernatur temporibus, nesciunt libero possimus impedit quos ratione animi delectus earum harum quod architecto deserunt, commodi odit?</p>
+              </div>
+            </div>
+            <div class="details-item delivery hidden">
+              <div class="caption">
+                <p>Nunc egestas posuere enim, eu maximus erat posuere eget</p>
+              </div>
+              <div class="rest-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, suscipit facilis pariatur, illo nostrum mollitia nam illum omnis ratione rerum quaerat maxime, doloremque sed iste accusantium voluptates vel veritatis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates voluptate, expedita ut sed maxime similique veniam, iure corrupti consequatur sit laudantium voluptatem doloribus error voluptas explicabo optio quia reiciendis debitis!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam enim saepe veritatis, veniam mollitia, vitae amet pariatur accusamus id temporibus corporis, rem dolorem ratione assumenda maiores ea sunt, quisquam eaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate veniam facere aliquam, eaque aspernatur temporibus, nesciunt libero possimus impedit quos ratione animi delectus earum harum quod architecto deserunt, commodi odit?</p>
+              </div>
+            </div>
+            <div class="details-item reviews hidden">
+              <div class="caption">
+                <p>Nunc egestas posuere enim, eu maximus erat posuere eget</p>
+              </div>
+              <div class="rest-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, suscipit facilis pariatur, illo nostrum mollitia nam illum omnis ratione rerum quaerat maxime, doloremque sed iste accusantium voluptates vel veritatis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates voluptate, expedita ut sed maxime similique veniam, iure corrupti consequatur sit laudantium voluptatem doloribus error voluptas explicabo optio quia reiciendis debitis!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam enim saepe veritatis, veniam mollitia, vitae amet pariatur accusamus id temporibus corporis, rem dolorem ratione assumenda maiores ea sunt, quisquam eaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate veniam facere aliquam, eaque aspernatur temporibus, nesciunt libero possimus impedit quos ratione animi delectus earum harum quod architecto deserunt, commodi odit?</p>
               </div>
             </div>
           </div>
@@ -276,4 +387,5 @@
 
     </div>
   </body>
+  <script src="js/scripts.min.js"></script>
 </html>
